--- a/src/views/Schedule/Schedule.sass
+++ b/src/views/Schedule/Schedule.sass
@@ -24,6 +24,7 @@
 
 .table__date
   font-size: 2.023rem
+  padding: 1rem 0
   color: $secondary
 
 .table__weekday
